feat(LottoRank): BiPredicate를 이용해서 등수 구하기